Fixed gap

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -683,7 +683,6 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
     font-size: 20px;
     font-weight: 500;
 }
@@ -1223,6 +1222,7 @@ a {
     display: grid;
     grid-template-columns: 22% 56% 22%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 20px;
 }
 
 .add-carrier-item .image {
